cambio obtenerTodosLosHechos