@@ -108,17 +108,21 @@ public class Fachada{
     if (hechosModelo == null || hechosModelo.isEmpty()) {
       return Collections.emptyList();
     }
-    List<Hecho>hechos = hechosModelo.stream()
-                .collect(Collectors.toMap(
-                        Hecho::getTitulo,
-                        Function.identity(),
-                        (existente, nuevo) -> existente))
-                        .values().stream().toList();
-                        
-    return hechos.stream()
-      .map(this::convertirADTO)
-      .collect(Collectors.toList());
-  }
+    List<Hecho> hechosUnicos = hechosModelo.stream()
+        .filter(h -> h.getTitulo() != null) 
+        .collect(Collectors.toMap(
+            Hecho::getTitulo,        
+            Function.identity(),      
+            (existente, nuevo) -> existente 
+        ))
+        .values()
+        .stream()
+        .toList(); 
+
+    return hechosUnicos.stream()
+        .map(this::convertirADTO)
+        .collect(Collectors.toList());
+      }
 
 
   
